add getEmployee and status attribute converter
