# src/main/java/com/workmotion/ems/dal/model/Employee.java
@@ -3,14 +3,20 @@ package com.workmotion.ems.dal.model;
 import java.io.Serializable;
 import java.time.LocalDate;
 import java.time.OffsetDateTime;
+import java.util.List;
 
 import javax.persistence.Column;
+import javax.persistence.Convert;
 import javax.persistence.Entity;
 import javax.persistence.GeneratedValue;
 import javax.persistence.GenerationType;
 import javax.persistence.Id;
+import javax.persistence.JoinColumn;
+import javax.persistence.ManyToOne;
 import javax.persistence.NamedQuery;
 import javax.persistence.Table;
+
+import com.workmotion.ems.util.EmployeeStatusAttributeConverter;
 
 import lombok.Data;
 import lombok.NoArgsConstructor;
@@ -42,10 +48,12 @@ public class Employee implements Serializable {
     @Column(name = "passport_number")
     private String passportNumber;
     
-    @Column(name = "employement_terms_id")
-    private Integer employementTermsId;
+    @ManyToOne
+    @JoinColumn(name = "employement_terms_id")
+    private EmployementTerms employementTerms;
     
-    private String status;
+    @Convert(converter = EmployeeStatusAttributeConverter.class)
+    private List<String> status;
     
     @Column(name = "created_at")
     private OffsetDateTime createdAt;
